# mcp-scorecard

./: .gitignore  404.html  CNAME  LICENSE  README.md  SECURITY.md  about.html  api.html  blog.html  index.html  platform.html  platforms.html  privacy.html  publisher.html  publishers.html  pyproject.toml  rescore.py  robots.txt  sitemap.xml  viewer.html
.github/workflows/: deploy.yml  scan.yml
blog/: posts.json
css/: style.css
db/: api_key_signups.sql  schema.sql
db/migrations/: 002_add_install_data_to_latest_scores.sql
js/: supabase.js
output/: flags.json  index.json  stats.json
scripts/: seed_db.py
src/mcp_scorecard/: __init__.py  __main__.py  config.py  pipeline.py
src/mcp_scorecard/collectors/: registry.py
src/mcp_scorecard/enrichers/: base.py  github.py
src/mcp_scorecard/output/: database.py  models.py  writer.py
src/mcp_scorecard/scoring/: badges.py  calculator.py  categories.py  flags.py  targets.py
ssg/: __init__.py  __main__.py  assets.py  build.py  data.py  render.py  seo.py  templates.py
ssg/pages/: __init__.py  blog_post.py  listings.py  platform.py  publisher.py  risk.py  server.py  static_pages.py  top.py
tests/: test_flags.py  test_scoring.py
tests/fixtures/: sample_registry.json
